--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -25,7 +25,7 @@
                 <td>INR :{{myOrder.order_total}}</td>
                 <td>
                     <div *ngFor="let imgPath of myOrder.photos" class="pull-left" style="margin-left:5px;margin-bottom: 5px;">
-                        <img src="{{ imgPath }}" style="height: 50px;width:50px;">
+                        <a href="{{ imgPath }}" download="{{ myOrder.order_id }}"><img src="{{ imgPath }}" style="height: 50px;width:50px;"></a>
                     </div>
                 </td>
                 <td>{{myOrder.tile}}</td>
@@ -65,7 +65,7 @@
                 <td>INR :{{myOrder.order_total}}</td>
                 <td>
                     <div *ngFor="let imgPath of myOrder.photos" class="pull-left" style="margin-left:5px;margin-bottom: 5px;">
-                        <img src="{{ imgPath }}" style="height: 50px;width:50px;">
+                        <a href="{{ imgPath }}" download="{{ myOrder.order_id }}"><img src="{{ imgPath }}" style="height: 50px;width:50px;"></a>
                     </div>
                 </td>
                 <td>{{myOrder.tile}}</td>
