--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,13 +22,13 @@
 		<h4>Follow Us</h4>
 		<ul>
 			<li>
-				<a [routerLink]="['/']">Instagram</a>
+				<a href="https://www.instagram.com/the_happyframes" target="_blank">Instagram</a>
 			</li>
 			<li>
-				<a [routerLink]="['/']">Facebook</a>
+				<a href="https://www.facebook.com/profile.php?id=100087267190342" target="_blank">Facebook</a>
 			</li>
 			<li>
-				<a [routerLink]="['/']">Twitter</a>
+				<a href="https://www.facebook.com/profile.php?id=100087267190342" target="_blank">Twitter</a>
 			</li>
 		</ul>
 	</div>
@@ -36,7 +36,7 @@
 		<h4>Contact Us</h4>
 		<ul>
 			<li>
-				<a href="https://api.whatsapp.com/send/?phone=917013132531&text&type=phone_number&app_absent=0" target="blank" target="blank">Chat with us</a>
+				<a href="https://api.whatsapp.com/send/?phone=917013132531&text&type=phone_number&app_absent=0" target="_blank">Chat with us</a>
 			</li>
 			<li>
 				<a [routerLink]="['/privacy-policy']">Privacy Policy</a>
@@ -48,5 +48,5 @@
 	</div>
 </div>
 <div class="text-center copy-right">
-	<div>© Copyright 2022 The Happy Frames</div>
+	<div>© Copyright {{ year }} The Happy Frames</div>
 </div>
