--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
 						<a [routerLink]="['/']">Home</a>
 					</li>
 					<li>
-						<a (click)="openUploadImg()" style="cursor: pointer;">Frame your Photo</a>
+						<a [routerLink]="['/upload-images']" style="cursor: pointer;">Frame your Photo</a>
 					</li>
 					<li>
 						<a [routerLink]="['/faq']">FAQ's</a>
