--- a/src/app/upload-images/upload-images.component.css
+++ b/src/app/upload-images/upload-images.component.css
@@ -370,3 +370,90 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.form-block{
+  position: relative;
+}
+.login-logo img{
+  width: auto;
+  height: 80px;
+  margin: auto;
+  display: table;
+}
+.login-fb{
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: rgb(52, 116, 227);
+  padding: 10px;
+  border-radius: 2px;
+}
+.login-gmail{
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid #dee0e2;
+  color: #333 !important;
+}
+.login-or{
+  font-size: 13px;
+  line-height: 1.8;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 15px;
+  color: rgba(0,0,0,0.54);
+}
+.email-field{
+  padding: 0 14px;
+  right: 0;
+  height: 40px;
+  font-size: 13px;
+  width: 100%;
+  border-radius: 0 2px 2px 0;
+  box-sizing: border-box;
+  position: relative;
+  color: rgba(0,0,0,0.87);
+}
+.first{
+  margin-bottom: 50px;
+}
+.login-happy-frames{
+  margin: 0px 0px 30px 0px;
+}
+.back-login b{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 20px;
+  color: #666;
+  cursor: pointer;
+}
+.log-bg{
+  background-color: #000;
+  margin-top: 100px;
+}
+.back-login{
+  position: absolute;
+  left: 10px;
+  cursor: pointer;
+}
+.back-login img{
+  height: 30px;
+}
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+    .contents{
+      width: 100% !important;
+    }
+    .log-bg{
+      display: none;
+    }
+    .half .contents {
+      padding: 80px 0px; 
+    }
+    .half, .half .container > .row {
+        height: auto;
+        min-height: auto;
+        display: block;
+    }
+}
