--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,20 +17,30 @@
 			      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 			      <li data-target="#myCarousel" data-slide-to="1"></li>
 			      <li data-target="#myCarousel" data-slide-to="2"></li>
+			      <li data-target="#myCarousel" data-slide-to="3"></li>
+			      <li data-target="#myCarousel" data-slide-to="4"></li>
 			    </ol>
 
 			    <!-- Wrapper for slides -->
 			    <div class="carousel-inner carousel-inner-main">
 			      <div class="item active">
-			        <img src="https://www.w3schools.com/bootstrap/la.jpg" alt="Los Angeles" style="width:100%;">
+			        <img src="assets/img/banner-1.jpg" alt="Happy Frames" style="width:100%;">
 			      </div>
 
 			      <div class="item">
-			        <img src="https://www.w3schools.com/bootstrap/chicago.jpg" alt="Chicago" style="width:100%;">
+			        <img src="assets/img/banner-2.jpg" alt="Happy Frames" style="width:100%;">
 			      </div>
 			    
 			      <div class="item">
-			        <img src="https://www.w3schools.com/bootstrap/ny.jpg" alt="New york" style="width:100%;">
+			        <img src="assets/img/banner-3.jpg" alt="Happy Frames" style="width:100%;">
+			      </div>
+
+			      <div class="item">
+			        <img src="assets/img/banner-4.jpg" alt="Happy Frames" style="width:100%;">
+			      </div>
+
+			      <div class="item">
+			        <img src="assets/img/banner-5.jpg" alt="Happy Frames" style="width:100%;">
 			      </div>
 			    </div>
 
