--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -117,6 +117,18 @@
     left: 0;
     right: 0;
     margin: auto;
+    margin-bottom: 10px !important;
+}
+.style-input-banner{
+	border-radius: 0px;
+    padding: 12px;
+    color: #000;
+    font-weight: bold;
+    width: 300px !important;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 .we-love{
 	width: 500px;
@@ -145,6 +157,13 @@
     .carousel-inner-main{
         height: auto !important;
     }
+    .video-banner {
+        width: 100% !important;
+        height: 100% !important;
+    }
+    .carousel-indicators{
+        display:none !important;
+    }
 }
 @media only screen and (min-width: 768px) and (max-width: 1366px) {
     .banner-img{
@@ -156,17 +175,20 @@
     .carousel-inner-main{
         height: auto !important;
     }
+    .carousel-indicators{
+        display:none !important;
+    }
 }
 .carousel-inner-main{
     height: 500px;
 }
 .carousel-inner-multiple{
-    height: 300px;
+    height: 500px;
     margin-top: 50px;
 }
 .mu-img img{
     width: 100%;
-    height: 300px;
+    height: 500px;
 }
 .text-p{
     position: absolute;
@@ -176,4 +198,8 @@
     color: #fff;
     padding: 0px 20px;
     text-align: center;
+}
+.video-banner{
+    width: 50%;
+    height:100%;
 }
