--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,22 +56,32 @@
 			  </div>
 		</div>
 	</div>
+	<div class="row pad-mar-0 home-box-inner" style="padding-top: 30px;">
+		<input type="button" value="Frame Your Photos" class="btn btn-block btn-primary btn-custom style-input-banner" [routerLink]="['/upload-images'] ">
+	</div>
 	<div class="row pad-mar-0 home-box-inner" style="padding-top: 100px;">
-		<div class="col-lg-4">
+		<div class="col-lg-3">
 			<div class="home-box">
 				<img src="assets/img/home-icon-1.png" class="banner-img-inner">
 				<h4 class="text-center">Easy Installation</h4>
 				<p class="text-center">Our frames stick to any wall</p>
 			</div>
 		</div>
-		<div class="col-lg-4">
+		<div class="col-lg-3">
 			<div class="home-box">
 				<img src="assets/img/home-icon-2.png" class="banner-img-inner">
 				<h4 class="text-center">Thin & Light</h4>
 				<p class="text-center">Thin-Profile Premium Frames</p>
 			</div>
 		</div>
-		<div class="col-lg-4">
+		<div class="col-lg-3">
+			<div class="home-box">
+				<img src="assets/img/home-icon-4.png" class="banner-img-inner">
+				<h4 class="text-center">Free Shipping</h4>
+				<p class="text-center">Through out India</p>
+			</div>
+		</div>
+		<div class="col-lg-3">
 			<div class="home-box">
 				<img src="assets/img/home-icon-3.png" class="banner-img-inner">
 				<h4 class="text-center">Satisfaction Guaranteed</h4>
@@ -81,8 +91,10 @@
 	</div>
 	<div class="home-box-magic">
 		<div class="row pad-mar-0">
-			<div class="col-lg-6">
-				<img src="assets/img/grid-banner-2.png"/>
+			<div class="col-lg-6" >
+				<video class="video-banner" autoplay loop>
+					<source src="assets/img/demo-video.mp4" type="video/mp4" >
+				  </video>
 			</div>
 			<div class="col-lg-6">
 				<div class="magic-cont">
@@ -94,26 +106,8 @@
 		</div>
 	</div>
 	<div class="one-stop-cont">
-		<h2 class="text-center one-stop-heading">One stop solution for your needs!</h2>
+		<h2 class="text-center one-stop-heading">The Happy Customers</h2>
 		<div class="row pad-mar-0">
-			<!-- <div class="col-lg-4">
-				<div class="one-stop-box">
-					<img src="assets/img/grid-banner-2.png">
-					<p class="text-center">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="one-stop-box">
-					<img src="assets/img/grid-banner-2.png">
-					<p class="text-center">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<div class="one-stop-box">
-					<img src="assets/img/grid-banner-2.png">
-					<p class="text-center">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
-				</div>
-			</div> -->
 			<div class="col-lg-12">
 				<div id="myCarousel2" class="carousel slide" data-ride="carousel">
 			    <!-- Indicators -->
@@ -127,57 +121,40 @@
 			    <div class="carousel-inner carousel-inner-multiple">
 			      <div class="item active">
 			        <div class="row">
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://m.media-amazon.com/images/I/51OEAc8QEVL._AC_.jpg">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+			        	<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-01.png">
 			        	</div>
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://i.ebayimg.com/images/g/z8MAAOSwjr9hLqKP/s-l500.jpg">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+						<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-02.png">
 			        	</div>
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://cdn.pixabay.com/photo/2020/02/06/01/52/frame-4822807__480.png">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+			        	<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-03.png">
+			        	</div>
+			        	<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-04.png">
 			        	</div>
 			        </div>
 			      </div>
 
 			      <div class="item">
 			        <div class="row">
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://m.media-amazon.com/images/I/51OEAc8QEVL._AC_.jpg">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+			        	<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-01.png">
 			        	</div>
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://i.ebayimg.com/images/g/z8MAAOSwjr9hLqKP/s-l500.jpg">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+						<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-02.png">
 			        	</div>
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://cdn.pixabay.com/photo/2020/02/06/01/52/frame-4822807__480.png">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+			        	<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-03.png">
 			        	</div>
-			        </div>
-			      </div>
-			    
-			      <div class="item">
-			        <div class="row">
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://m.media-amazon.com/images/I/51OEAc8QEVL._AC_.jpg">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
-			        	</div>
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://i.ebayimg.com/images/g/z8MAAOSwjr9hLqKP/s-l500.jpg">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
-			        	</div>
-			        	<div class="col-lg-4 mu-img">
-			        		<img src="https://cdn.pixabay.com/photo/2020/02/06/01/52/frame-4822807__480.png">
-			        		<p class="text-p">Get your photos in stylish frames that stick directly to your wall and leave no damage behind!</p>
+			        	<div class="col-lg-3 mu-img">
+			        		<img src="assets/img/Testimonials-04.png">
 			        	</div>
 			        </div>
 			      </div>
 			    </div>
 
-			    <!-- Left and right controls -->
+			    <!-- Left and right controls 
 			    <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
 			      <span class="glyphicon glyphicon-chevron-left"></span>
 			      <span class="sr-only">Previous</span>
@@ -185,14 +162,14 @@
 			    <a class="right carousel-control" href="#myCarousel2" data-slide="next">
 			      <span class="glyphicon glyphicon-chevron-right"></span>
 			      <span class="sr-only">Next</span>
-			    </a>
+			    </a>-->
 			  </div>
 			</div>
 		</div>
 	</div>
 	<div class="row pad-mar-0 main-banner">
 		<div class="stylish-banner">
-			<img src="assets/img/banner.png">
+			<img src="assets/img/banner-1.jpg">
 			<input type="button" value="Frame Your Photos" class="btn btn-block btn-primary btn-custom style-input" [routerLink]="['/upload-images']">
 		</div>
 	</div>
